--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1aa6f52
-	trimbase = 
+	trim = audio_capture
+	base = 8f71e22
+	trimbase = 1aa6f52
 	parent = upstream
 	previous = 1b93fe0
