--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2a39954
-	trimbase = 
+	trim = sound_play
+	base = 93a7a23
+	trimbase = 2a39954
 	parent = upstream
 	previous = 1b93fe0
