--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7acb2ae
-	trimbase = 
+	trim = audio_play
+	base = 8515668
+	trimbase = 7acb2ae
 	parent = upstream
 	previous = 1b93fe0
