--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2648d41
-	trimbase = 
+	trim = audio_common
+	base = 379ee00
+	trimbase = 2648d41
 	parent = upstream
 	previous = 1b93fe0
