--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb920bf
-	trimbase = 
+	trim = audio_common_msgs
+	base = 3f22c3f
+	trimbase = fb920bf
 	parent = upstream
 	previous = 1b93fe0
