--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = bf06201
-	trimbase = 
+	base = b1d5cae
+	trimbase = bf06201
 	parent = upstream
 	previous = 1b93fe0
