--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,17 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.4.6)
+include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
-project(sound_play)
+# Append to CPACK_SOURCE_IGNORE_FILES a semicolon-separated list of
+# directories (or patterns, but directories should suffice) that should
+# be excluded from the distro.  This is not the place to put things that
+# should be ignored everywhere, like "build" directories; that happens in
+# rosbuild/rosbuild.cmake.  Here should be listed packages that aren't
+# ready for inclusion in a distro.
+#
+# This list is combined with the list in rosbuild/rosbuild.cmake.  Note
+# that CMake 2.6 may be required to ensure that the two lists are combined
+# properly.  CMake 2.4 seems to have unpredictable scoping rules for such
+# variables.
+#list(APPEND CPACK_SOURCE_IGNORE_FILES /core/experimental)
 
-find_package(catkin REQUIRED COMPONENTS message_generation roscpp)
-add_message_files(DIRECTORY msg FILES SoundRequest.msg)
-
-include_directories(include ${catkin_INCLUDE_DIRS})
-
-add_subdirectory(test)
-
-catkin_python_setup()
-
-generate_messages()
-
-install(PROGRAMS
-   scripts/playbuiltin.py
-   scripts/play.py
-   scripts/say.py
-   scripts/shutup.py
-   scripts/soundplay_node.py
-   scripts/test.py
-      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-install(FILES
-   soundplay_node.launch
-   test.launch
-      DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
-catkin_package(CATKIN_DEPENDS message_runtime)
+rosbuild_make_distribution(0.1.9)
