--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = d16151b
-	trimbase = 
+	base = 7a5eebf
+	trimbase = d16151b
 	parent = upstream
 	previous = 1b93fe0
