--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = f949e86
-	trimbase = 
+	base = 83cffac
+	trimbase = f949e86
 	parent = upstream
 	previous = 1b93fe0
