--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = bc740e3
-	trimbase = 
+	base = 5a0fd5c
+	trimbase = bc740e3
 	parent = upstream
 	previous = 1b93fe0
