--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 53dd512
-	trimbase = 
+	base = 389a661
+	trimbase = 53dd512
 	parent = upstream
 	previous = 1b93fe0
