--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a0fd5c
+	base = 685c0d0
 	trimbase = 
 	parent = release/hydro/audio_common
-	previous = 
+	previous = 5a0fd5c
