--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f7e6040
+	base = fd2955a
 	trimbase = 
 	parent = debian/hydro/audio_common
-	previous = 
+	previous = f7e6040
