--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b1d5cae
+	base = 3625be4
 	trimbase = 
 	parent = release/hydro/audio_capture
-	previous = 
+	previous = b1d5cae
