--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f9d9ee5
+	base = e77799d
 	trimbase = 
 	parent = debian/hydro/audio_capture
-	previous = 
+	previous = f9d9ee5
