--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83cffac
+	base = af2013d
 	trimbase = 
 	parent = release/hydro/audio_play
-	previous = 
+	previous = 83cffac
