--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5cce056
+	base = 1005ffc
 	trimbase = 
 	parent = debian/hydro/audio_play
-	previous = 
+	previous = 5cce056
