--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7a5eebf
+	base = 4703044
 	trimbase = 
 	parent = release/hydro/sound_play
-	previous = 
+	previous = 7a5eebf
