--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3009c33
+	base = c682dab
 	trimbase = 
 	parent = debian/hydro/sound_play
-	previous = 
+	previous = 3009c33
