--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 389a661
+	base = 4b960d1
 	trimbase = 
 	parent = release/hydro/audio_common_msgs
-	previous = 
+	previous = 389a661
