--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb2f1d1
+	base = d943468
 	trimbase = 
 	parent = debian/hydro/audio_common_msgs
-	previous = 
+	previous = cb2f1d1
