--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = bda084e
-	trimbase = 
+	base = ecb32fa
+	trimbase = bda084e
 	parent = upstream
 	previous = 0bc8b97
