--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = e0ce3a9
-	trimbase = 
+	base = 9051a17
+	trimbase = e0ce3a9
 	parent = upstream
 	previous = 0bc8b97
