--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 202ae7e
-	trimbase = 
+	base = e133600
+	trimbase = 202ae7e
 	parent = upstream
 	previous = 0bc8b97
