--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 0265ee3
-	trimbase = 
+	base = 3543b0c
+	trimbase = 0265ee3
 	parent = upstream
 	previous = 0bc8b97
