--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 70bebc2
-	trimbase = 
+	base = 599a67f
+	trimbase = 70bebc2
 	parent = upstream
 	previous = 0bc8b97
