--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = ffbecb9
-	trimbase = 
+	base = bb3e228
+	trimbase = ffbecb9
 	parent = upstream
 	previous = 0bc8b97
