--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = fdba740
-	trimbase = 
+	base = 9d3cdd0
+	trimbase = fdba740
 	parent = upstream
 	previous = 0bc8b97
