--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 9dd7f23
-	trimbase = 
+	base = 2aa7c5b
+	trimbase = 9dd7f23
 	parent = upstream
 	previous = 0bc8b97
