--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = aac246d
-	trimbase = 
+	base = f8662b4
+	trimbase = aac246d
 	parent = upstream
 	previous = 0bc8b97
