--- a/audio_play/CMakeLists.txt
+++ b/audio_play/CMakeLists.txt
@@ -11,7 +11,14 @@ find_package(Boost REQUIRED COMPONENTS thread)
 
 include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${GST_INCLUDE_DIRS})
 
+catkin_package()
+
 add_executable(audio_play src/audio_play.cpp)
 target_link_libraries(audio_play ${catkin_LIBRARIES} ${GST_LIBRARIES} ${Boost_LIBRARIES}) 
+add_dependencies(audio_play ${catkin_EXPORTED_TARGETS})
 
-catkin_package()
+install(TARGETS audio_play 
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+install(DIRECTORY launch
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
