--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = d001b6a
-	trimbase = 
+	base = 55b3c9c
+	trimbase = d001b6a
 	parent = upstream
 	previous = 34eb6d9
