--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 6146357
-	trimbase = 
+	base = 4e565b4
+	trimbase = 6146357
 	parent = upstream
 	previous = 34eb6d9
