--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 37ba978
-	trimbase = 
+	base = aa6f8ca
+	trimbase = 37ba978
 	parent = upstream
 	previous = 34eb6d9
