--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 075af68
-	trimbase = 
+	base = e91ef9c
+	trimbase = 075af68
 	parent = upstream
 	previous = 34eb6d9
