--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 79b3231
-	trimbase = 
+	base = 8b45299
+	trimbase = 79b3231
 	parent = upstream
 	previous = 34eb6d9
