--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_executable(audio_capture src/audio_capture.cpp)
 target_link_libraries(audio_capture ${catkin_LIBRARIES} ${GST_LIBRARIES} ${Boost_LIBRARIES}) 
 
 catkin_package()
+
+install(TARGETS audio_capture
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
