--- a/tracks.yaml
+++ b/tracks.yaml
@@ -13,7 +13,7 @@ tracks:
     name: upstream
     patches: null
     release_inc: '0'
-    release_repo_url: null
+    release_repo_url: git@github.com:ros-gbp/audio_common-release.git
     release_tag: :{version}
     ros_distro: hydro
     vcs_type: git
