--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = a241078
-	trimbase = 
+	base = 096acba
+	trimbase = a241078
 	parent = upstream
 	previous = 833a7de
