--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 5813094
-	trimbase = 
+	base = ff6e5b1
+	trimbase = 5813094
 	parent = upstream
 	previous = 833a7de
