--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 8ce3ff2
-	trimbase = 
+	base = 5de256b
+	trimbase = 8ce3ff2
 	parent = upstream
 	previous = 833a7de
