--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = cd6ab0c
-	trimbase = 
+	base = 630c9e2
+	trimbase = cd6ab0c
 	parent = upstream
 	previous = 833a7de
