--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 03775f0
-	trimbase = 
+	base = ed41952
+	trimbase = 03775f0
 	parent = upstream
 	previous = 833a7de
