--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 62177e3
-	trimbase = 
+	base = a1d08d9
+	trimbase = 62177e3
 	parent = upstream
 	previous = 9b288eb
