--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 9c46732
-	trimbase = 
+	base = fa48ad9
+	trimbase = 9c46732
 	parent = upstream
 	previous = 9b288eb
