--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 8011ecf
-	trimbase = 
+	base = fb8a176
+	trimbase = 8011ecf
 	parent = upstream
 	previous = 9b288eb
