--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = e5e44e6
-	trimbase = 
+	base = aa20d13
+	trimbase = e5e44e6
 	parent = upstream
 	previous = 9b288eb
