--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = ca2cbf0
-	trimbase = 
+	base = 1961484
+	trimbase = ca2cbf0
 	parent = upstream
 	previous = 9b288eb
