--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = fe12b32
-	trimbase = 
+	base = 5bf2880
+	trimbase = fe12b32
 	parent = upstream
 	previous = 43c61ae
