--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = ad252da
-	trimbase = 
+	base = c87c222
+	trimbase = ad252da
 	parent = upstream
 	previous = 43c61ae
