--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = f4b88a2
-	trimbase = 
+	base = 681aeea
+	trimbase = f4b88a2
 	parent = upstream
 	previous = 43c61ae
