--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = e75af05
-	trimbase = 
+	base = e6d5945
+	trimbase = e75af05
 	parent = upstream
 	previous = 43c61ae
