--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 3a8b7b4
-	trimbase = 
+	base = 84593ae
+	trimbase = 3a8b7b4
 	parent = upstream
 	previous = 43c61ae
