Imported upstream version '0.2.7' of 'upstream'

--- a/audio_capture/CMakeLists.txt
+++ b/audio_capture/CMakeLists.txt
@@ -14,7 +14,8 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${GST_INCLUDE_D
 catkin_package()
 
 add_executable(audio_capture src/audio_capture.cpp)
-target_link_libraries(audio_capture ${catkin_LIBRARIES} ${GST_LIBRARIES} ${Boost_LIBRARIES}) 
+target_link_libraries(audio_capture ${catkin_LIBRARIES} ${GST_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(audio_capture ${catkin_EXPORTED_TARGETS})
 
 install(TARGETS audio_capture
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
