--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = dd4ed0e
-	trimbase = 
+	base = 4425524
+	trimbase = dd4ed0e
 	parent = upstream
 	previous = e2811c2
