--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 96a95c4
-	trimbase = 
+	base = 267c6e3
+	trimbase = 96a95c4
 	parent = upstream
 	previous = e2811c2
