--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 41595d0
-	trimbase = 
+	base = 3af2c8e
+	trimbase = 41595d0
 	parent = upstream
 	previous = e2811c2
