--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 75c6f66
-	trimbase = 
+	base = 84403ae
+	trimbase = 75c6f66
 	parent = upstream
 	previous = e2811c2
