--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 24bf9c2
-	trimbase = 
+	base = 8e5fee0
+	trimbase = 24bf9c2
 	parent = upstream
 	previous = e2811c2
