--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e5fee0
+	base = 5bb9784
 	trimbase = 
 	parent = release/hydro/audio_common
-	previous = 
+	previous = 8e5fee0
