--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 216b7fa
+	base = 3327eb0
 	trimbase = 
 	parent = rpm/hydro/audio_common
-	previous = 
+	previous = 216b7fa
