--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4425524
+	base = 14f54a4
 	trimbase = 
 	parent = release/hydro/audio_capture
-	previous = 
+	previous = 4425524
