--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b7789e
+	base = 25ff0b5
 	trimbase = 
 	parent = rpm/hydro/audio_capture
-	previous = 
+	previous = 7b7789e
