--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3af2c8e
+	base = 2d17cc6
 	trimbase = 
 	parent = release/hydro/audio_play
-	previous = 
+	previous = 3af2c8e
