--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78011a2
+	base = 72b1ca1
 	trimbase = 
 	parent = rpm/hydro/audio_play
-	previous = 
+	previous = 78011a2
