--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 267c6e3
+	base = 75e9407
 	trimbase = 
 	parent = release/hydro/sound_play
-	previous = 
+	previous = 267c6e3
