--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b2afdb9
+	base = 1e537e1
 	trimbase = 
 	parent = rpm/hydro/sound_play
-	previous = 
+	previous = b2afdb9
