--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84403ae
+	base = f42d267
 	trimbase = 
 	parent = release/hydro/audio_common_msgs
-	previous = 
+	previous = 84403ae
