--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4628cc3
+	base = 1a5f464
 	trimbase = 
 	parent = rpm/hydro/audio_common_msgs
-	previous = 
+	previous = 4628cc3
