--- a/tracks.yaml
+++ b/tracks.yaml
@@ -39,7 +39,7 @@ tracks:
     release_inc: '0'
     release_repo_url: git@github.com:ros-gbp/audio_common-release.git
     release_tag: :{version}
-    ros_distro: hydro
+    ros_distro: indigo
     vcs_type: git
     vcs_uri: https://github.com/ros-drivers/audio_common.git
     version: :{auto}
