--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b1997b4
-	trimbase = 
+	trim = audio_capture
+	base = fbc9ec4
+	trimbase = b1997b4
 	parent = upstream
 	previous = e2811c2
