--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cd4aa03
-	trimbase = 
+	trim = sound_play
+	base = 07a3476
+	trimbase = cd4aa03
 	parent = upstream
 	previous = e2811c2
