--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 830908a
-	trimbase = 
+	trim = audio_play
+	base = 8a4e651
+	trimbase = 830908a
 	parent = upstream
 	previous = e2811c2
