--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d20adee
-	trimbase = 
+	trim = audio_common
+	base = b1ef1be
+	trimbase = d20adee
 	parent = upstream
 	previous = e2811c2
