--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d20adee
-	trimbase = 
+	trim = audio_common_msgs
+	base = c0cc559
+	trimbase = d20adee
 	parent = upstream
 	previous = e2811c2
