--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 07a3476
+	base = f98670a
 	trimbase = 
 	parent = release/indigo/sound_play
-	previous = 
+	previous = 07a3476
