--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4da3e64
+	base = b0b1f1f
 	trimbase = 
 	parent = debian/indigo/sound_play
-	previous = 
+	previous = 4da3e64
