--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f3acb71
+	base = 612a71e
 	trimbase = 
 	parent = debian/indigo/audio_common
-	previous = 
+	previous = f3acb71
