--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbc9ec4
+	base = 7d06f96
 	trimbase = 
 	parent = release/indigo/audio_capture
-	previous = 
+	previous = fbc9ec4
