--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 23b18a0
+	base = 9ad1972
 	trimbase = 
 	parent = debian/indigo/audio_capture
-	previous = 
+	previous = 23b18a0
