--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81329f2
+	base = a8ac880
 	trimbase = 
 	parent = debian/indigo/audio_play
-	previous = 
+	previous = 81329f2
