--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b1549b
+	base = bf0953d
 	trimbase = 
 	parent = debian/indigo/audio_common_msgs
-	previous = 
+	previous = 6b1549b
