--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 258bad8
+	base = ae7aa0f
 	trimbase = 
 	parent = rpm/indigo/sound_play
-	previous = 
+	previous = 258bad8
