--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b1ef1be
+	base = c959f24
 	trimbase = 
 	parent = release/indigo/audio_common
-	previous = 
+	previous = b1ef1be
