--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b21111
+	base = a74efae
 	trimbase = 
 	parent = rpm/indigo/audio_common
-	previous = 
+	previous = 2b21111
