--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbc9ec4
+	base = 2a6b7b6
 	trimbase = 
 	parent = release/indigo/audio_capture
-	previous = 
+	previous = fbc9ec4
