--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9cdbe76
+	base = bad9b00
 	trimbase = 
 	parent = rpm/indigo/audio_capture
-	previous = 
+	previous = 9cdbe76
