--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a4e651
+	base = 7c9b194
 	trimbase = 
 	parent = release/indigo/audio_play
-	previous = 
+	previous = 8a4e651
