--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b5b1561
+	base = 8e76bfb
 	trimbase = 
 	parent = rpm/indigo/audio_play
-	previous = 
+	previous = b5b1561
