--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c0cc559
+	base = 0b764f8
 	trimbase = 
 	parent = release/indigo/audio_common_msgs
-	previous = 
+	previous = c0cc559
