--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8093121
+	base = 69e6e44
 	trimbase = 
 	parent = rpm/indigo/audio_common_msgs
-	previous = 
+	previous = 8093121
