--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6072ef2
-	trimbase = 
+	trim = audio_capture
+	base = 3a78c56
+	trimbase = 6072ef2
 	parent = upstream
 	previous = e2811c2
