--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fab0db0
-	trimbase = 
+	trim = sound_play
+	base = 2326c59
+	trimbase = fab0db0
 	parent = upstream
 	previous = e2811c2
