--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d0508e5
-	trimbase = 
+	trim = audio_common_msgs
+	base = b847870
+	trimbase = d0508e5
 	parent = upstream
 	previous = e2811c2
