--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3773719
-	trimbase = 
+	trim = audio_common
+	base = ecf4e90
+	trimbase = 3773719
 	parent = upstream
 	previous = e2811c2
