--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d3c5988
-	trimbase = 
+	trim = audio_play
+	base = 2304799
+	trimbase = d3c5988
 	parent = upstream
 	previous = e2811c2
