--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3799e4e
+	base = 433d12c
 	trimbase = 
 	parent = debian/jade/audio_common_msgs
-	previous = 
+	previous = 3799e4e
