--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a2a448
+	base = 2ed6c5c
 	trimbase = 
 	parent = debian/jade/audio_common
-	previous = 
+	previous = 8a2a448
