--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 012d75c
+	base = 94a33b0
 	trimbase = 
 	parent = debian/jade/sound_play
-	previous = 
+	previous = 012d75c
