--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a78c56
+	base = 2098e4a
 	trimbase = 
 	parent = release/jade/audio_capture
-	previous = 
+	previous = 3a78c56
