--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8cd1731
+	base = df12219
 	trimbase = 
 	parent = debian/jade/audio_capture
-	previous = 
+	previous = 8cd1731
