--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8cd1731
+	base = c376415
 	trimbase = 
 	parent = debian/jade/audio_capture
-	previous = 
+	previous = 8cd1731
