--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2304799
+	base = 1ed01fe
 	trimbase = 
 	parent = release/jade/audio_play
-	previous = 
+	previous = 2304799
