--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dcc854a
+	base = c009c3f
 	trimbase = 
 	parent = debian/jade/audio_play
-	previous = 
+	previous = dcc854a
