--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b847870
+	base = a84fd38
 	trimbase = 
 	parent = release/jade/audio_common_msgs
-	previous = 
+	previous = b847870
