--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92b1370
+	base = 707ac89
 	trimbase = 
 	parent = rpm/jade/audio_common_msgs
-	previous = 
+	previous = 92b1370
