--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ecf4e90
+	base = c83c2df
 	trimbase = 
 	parent = release/jade/audio_common
-	previous = 
+	previous = ecf4e90
