--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5c40815
+	base = d599180
 	trimbase = 
 	parent = rpm/jade/audio_common
-	previous = 
+	previous = 5c40815
