--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2326c59
+	base = 3d66ed0
 	trimbase = 
 	parent = release/jade/sound_play
-	previous = 
+	previous = 2326c59
