--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7ddb1c
+	base = 47c73c6
 	trimbase = 
 	parent = rpm/jade/sound_play
-	previous = 
+	previous = d7ddb1c
