--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0dc96a1
+	base = 08aee94
 	trimbase = 
 	parent = rpm/jade/audio_capture
-	previous = 
+	previous = 0dc96a1
