--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3820ff2
+	base = 59c25d2
 	trimbase = 
 	parent = rpm/jade/audio_play
-	previous = 
+	previous = 3820ff2
