--- a/tracks.yaml
+++ b/tracks.yaml
@@ -55,9 +55,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: hydro-devel
+    last_version: 0.2.7
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:ros-gbp/audio_common-release.git
     release_tag: :{version}
     ros_distro: jade
