--- a/tracks.yaml
+++ b/tracks.yaml
@@ -32,7 +32,7 @@ tracks:
       -i :{release_inc}
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: hydro-devel
+    devel_branch: indigo-devel
     last_version: 0.2.7
     name: upstream
     patches: null
@@ -54,7 +54,7 @@ tracks:
       -i :{release_inc}
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: hydro-devel
+    devel_branch: indigo-devel
     last_version: 0.2.7
     name: upstream
     patches: null
