Imported upstream version '0.2.8' of 'upstream'

--- a/sound_play/CMakeLists.txt
+++ b/sound_play/CMakeLists.txt
@@ -2,17 +2,18 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(sound_play)
 
-find_package(catkin REQUIRED COMPONENTS message_generation roscpp)
+find_package(catkin REQUIRED COMPONENTS message_generation roscpp actionlib_msgs)
 
+add_action_files(DIRECTORY action FILES SoundRequest.action)
 add_message_files(DIRECTORY msg FILES SoundRequest.msg)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 catkin_python_setup()
 
-generate_messages()
+generate_messages(DEPENDENCIES actionlib_msgs)
 
-catkin_package(CATKIN_DEPENDS message_runtime
+catkin_package(CATKIN_DEPENDS message_runtime actionlib_msgs
                INCLUDE_DIRS include)
 
 add_subdirectory(test)
@@ -24,6 +25,7 @@ install(PROGRAMS
    scripts/shutup.py
    scripts/soundplay_node.py
    scripts/test.py
+   scripts/test_actionlib_client.py
       DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(FILES
