--- a/audio_common_msgs/package.xml
+++ b/audio_common_msgs/package.xml
@@ -1,10 +1,10 @@
 <package>
    <name>audio_common_msgs</name>
-   <version>0.2.7</version>
+   <version>0.2.8</version>
    <description>
       Messages for transmitting audio via ROS
    </description>
-   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
    <author>Nate Koenig</author>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/audio_common_msgs</url>
