--- a/sound_play/package.xml
+++ b/sound_play/package.xml
@@ -1,10 +1,10 @@
 <package>
    <name>sound_play</name>
-   <version>0.2.7</version>
+   <version>0.2.8</version>
    <description>
       sound_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
    </description>
-   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
    <author>Blaise Gassend</author>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/sound_play</url>
@@ -15,6 +15,7 @@
 
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
+   <build_depend>actionlib_msgs</build_depend>
    <build_depend>audio_common_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>libgstreamer0.10-dev</build_depend>
@@ -23,6 +24,7 @@
 
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
+   <run_depend>actionlib_msgs</run_depend>
    <run_depend>audio_common_msgs</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
    <run_depend>libgstreamer0.10-0</run_depend>
