--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 8b9d039
-	trimbase = 
+	base = 5a4bbc8
+	trimbase = 8b9d039
 	parent = upstream
 	previous = 56b1557
