--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = e6adf71
-	trimbase = 
+	base = 42a72ce
+	trimbase = e6adf71
 	parent = upstream
 	previous = 56b1557
