--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 52b8e8d
-	trimbase = 
+	base = f7c86e0
+	trimbase = 52b8e8d
 	parent = upstream
 	previous = 56b1557
