--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 358c41a
-	trimbase = 
+	base = edbd7f7
+	trimbase = 358c41a
 	parent = upstream
 	previous = 56b1557
