--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 015184d
-	trimbase = 
+	base = edb34ce
+	trimbase = 015184d
 	parent = upstream
 	previous = 56b1557
