--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <package>
    <name>audio_common</name>
-   <version>0.2.7</version>
+   <version>0.2.8</version>
    <description>
       Common code for working with audio in ROS
    </description>
-   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
    <author>Blaise Gassend</author>
    <license>BSD</license>  
    <url type="website">http://ros.org/wiki/audio_common</url>
