--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <package>
    <name>audio_capture</name>
-   <version>0.2.7</version>
+   <version>0.2.8</version>
    <description>
       Transports audio from a source to a destination. Audio sources can come
       from a microphone or file. The destination can play the audio or save it
       to an mp3 file.
    </description>
-   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
    <author>Nate Koenig</author>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/audio_capture</url>
