--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <package>
    <name>audio_play</name>
-   <version>0.2.7</version>
+   <version>0.2.8</version>
    <description>
       Outputs audio to a speaker from a source node.
    </description>
-   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
    <author>Nate Koenig</author>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/audio_play</url>
