--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16dbe16
+	base = 9116274
 	trimbase = 
 	parent = rpm/indigo/sound_play
-	previous = 
+	previous = 16dbe16
