--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e5362d
+	base = df44a3c
 	trimbase = 
 	parent = rpm/indigo/audio_common
-	previous = 
+	previous = 7e5362d
