--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 75df2ae
+	base = ad9690e
 	trimbase = 
 	parent = rpm/indigo/audio_capture
-	previous = 
+	previous = 75df2ae
