--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4538886
+	base = a1facf9
 	trimbase = 
 	parent = rpm/indigo/audio_play
-	previous = 
+	previous = 4538886
