--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b5b4cb7
+	base = 59b8d83
 	trimbase = 
 	parent = rpm/indigo/audio_common_msgs
-	previous = 
+	previous = b5b4cb7
