--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 3c78a90
-	trimbase = 
+	base = 965b9f2
+	trimbase = 3c78a90
 	parent = upstream
 	previous = 56b1557
