--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 85df791
-	trimbase = 
+	base = 469aed7
+	trimbase = 85df791
 	parent = upstream
 	previous = 56b1557
