--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = dfb3213
-	trimbase = 
+	base = 463640c
+	trimbase = dfb3213
 	parent = upstream
 	previous = 56b1557
