--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = d6a768a
-	trimbase = 
+	base = 96b47ab
+	trimbase = d6a768a
 	parent = upstream
 	previous = 56b1557
