--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.7-0": ["Thu Jun 25 2015", "Austin Hendrix", "ahendrix@willowgarage.com"]}
+{"0.2.7-0": ["Thu Jun 25 2015", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.2.8-0": ["Fri Oct 02 2015", "Austin Hendrix", "namniart@gmail.com"]}
