--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = d835d41
-	trimbase = 
+	base = 7a56ea7
+	trimbase = d835d41
 	parent = upstream
 	previous = a03db35
