--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 3f66a8e
-	trimbase = 
+	base = befa448
+	trimbase = 3f66a8e
 	parent = upstream
 	previous = a03db35
