--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = d308b4d
-	trimbase = 
+	base = 6160e35
+	trimbase = d308b4d
 	parent = upstream
 	previous = a03db35
