--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 268cc72
-	trimbase = 
+	base = e72040d
+	trimbase = 268cc72
 	parent = upstream
 	previous = a03db35
