--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 8047861
-	trimbase = 
+	base = 712baaa
+	trimbase = 8047861
 	parent = upstream
 	previous = a03db35
