Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.8": ["Austin Hendrix", "namniart@gmail.com"]}
+{"0.2.7": ["Austin Hendrix", "namniart@gmail.com"], "0.2.6": ["Austin Hendrix", "namniart@gmail.com"], "0.2.5": ["Austin Hendrix", "namniart@gmail.com"], "0.2.4": ["Austin Hendrix", "namniart@gmail.com"], "0.2.3": ["Austin Hendrix", "namniart@gmail.com"], "0.2.2": ["Austin Hendrix", "namniart@gmail.com"], "0.2.1": ["Austin Hendrix", "namniart@gmail.com"], "0.2.0": ["Austin Hendrix", "namniart@gmail.com"], "0.2.9": ["Austin Hendrix", "namniart@gmail.com"], "0.2.8": ["Austin Hendrix", "namniart@gmail.com"]}
