Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.8-0": ["Fri Oct 02 2015", "Austin Hendrix", "namniart@gmail.com"]}
+{"0.2.9-0": ["Wed Dec 02 2015", "Austin Hendrix", "namniart@gmail.com"], "0.2.8-0": ["Fri Oct 02 2015", "Austin Hendrix", "namniart@gmail.com"]}
