--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = bc91a05
-	trimbase = 
+	base = c648224
+	trimbase = bc91a05
 	parent = upstream
 	previous = a03db35
