--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = bc4fa60
-	trimbase = 
+	base = a3cfc3d
+	trimbase = bc4fa60
 	parent = upstream
 	previous = a03db35
