--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 68739ec
-	trimbase = 
+	base = d77db76
+	trimbase = 68739ec
 	parent = upstream
 	previous = a03db35
