--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 66e95fd
-	trimbase = 
+	base = 2d0ef6d
+	trimbase = 66e95fd
 	parent = upstream
 	previous = a03db35
