--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 59ecd8a
-	trimbase = 
+	base = 4cdc7a2
+	trimbase = 59ecd8a
 	parent = upstream
 	previous = a03db35
