--- a/sound_play/CMakeLists.txt
+++ b/sound_play/CMakeLists.txt
@@ -16,9 +16,11 @@ generate_messages(DEPENDENCIES actionlib_msgs)
 catkin_package(CATKIN_DEPENDS message_runtime actionlib_msgs
                INCLUDE_DIRS include)
 
-catkin_add_nosetests(scripts/test)
+if(CATKIN_ENABLE_TESTING)
+    catkin_add_nosetests(scripts/test)
 
-add_subdirectory(test)
+    add_subdirectory(test)
+endif()
 
 install(PROGRAMS
    scripts/playbuiltin.py
