--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 6aac6ad
-	trimbase = 
+	base = f8620a8
+	trimbase = 6aac6ad
 	parent = upstream
 	previous = 179df43
