--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = f157d0f
-	trimbase = 
+	base = c35cb8d
+	trimbase = f157d0f
 	parent = upstream
 	previous = 179df43
