--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 29244a7
-	trimbase = 
+	base = 587aa41
+	trimbase = 29244a7
 	parent = upstream
 	previous = 179df43
