--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 1a5f584
-	trimbase = 
+	base = 8477a0e
+	trimbase = 1a5f584
 	parent = upstream
 	previous = 179df43
