--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 4a7bb70
-	trimbase = 
+	base = 4299a4c
+	trimbase = 4a7bb70
 	parent = upstream
 	previous = 179df43
