Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.7-1": ["Fri Jul 25 2014", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.2.9-0": ["Wed Dec 02 2015", "Austin Hendrix", "namniart@gmail.com"], "0.2.8-0": ["Fri Oct 02 2015", "Austin Hendrix", "namniart@gmail.com"]}
+{"0.2.7-1": ["Fri Jul 25 2014", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.2.10-0": ["Thu Jan 21 2016", "Austin Hendrix", "namniart@gmail.com"], "0.2.9-0": ["Wed Dec 02 2015", "Austin Hendrix", "namniart@gmail.com"], "0.2.8-0": ["Fri Oct 02 2015", "Austin Hendrix", "namniart@gmail.com"]}
