--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 9d6dd3a
-	trimbase = 
+	base = 2961728
+	trimbase = 9d6dd3a
 	parent = upstream
 	previous = 179df43
