--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 609e12d
-	trimbase = 
+	base = c3b7964
+	trimbase = 609e12d
 	parent = upstream
 	previous = 179df43
