--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = ef4cd0e
-	trimbase = 
+	base = 62ac23f
+	trimbase = ef4cd0e
 	parent = upstream
 	previous = 179df43
