--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = e7a4af0
-	trimbase = 
+	base = f764b68
+	trimbase = e7a4af0
 	parent = upstream
 	previous = 179df43
