--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 3ad4ffd
-	trimbase = 
+	base = a0d2cc0
+	trimbase = 3ad4ffd
 	parent = upstream
 	previous = 179df43
