--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = b63f7c5
-	trimbase = 
+	base = 478cfab
+	trimbase = b63f7c5
 	parent = upstream
 	previous = a3e0dc8
