--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 71ef028
-	trimbase = 
+	base = fbfe0df
+	trimbase = 71ef028
 	parent = upstream
 	previous = a3e0dc8
