--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 5217d39
-	trimbase = 
+	base = b6d5802
+	trimbase = 5217d39
 	parent = upstream
 	previous = a3e0dc8
