--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 3b7e916
-	trimbase = 
+	base = 33d2025
+	trimbase = 3b7e916
 	parent = upstream
 	previous = a3e0dc8
