--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = a0bdad0
-	trimbase = 
+	base = 17bda5d
+	trimbase = a0bdad0
 	parent = upstream
 	previous = a3e0dc8
