--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = d3d282c
-	trimbase = 
+	base = e3f54be
+	trimbase = d3d282c
 	parent = upstream
 	previous = a3e0dc8
