--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = c1f98f2
-	trimbase = 
+	base = 40dbb90
+	trimbase = c1f98f2
 	parent = upstream
 	previous = a3e0dc8
