--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 5338a32
-	trimbase = 
+	base = 0b248d2
+	trimbase = 5338a32
 	parent = upstream
 	previous = a3e0dc8
