--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 91ed0d3
-	trimbase = 
+	base = 08d723b
+	trimbase = 91ed0d3
 	parent = upstream
 	previous = a3e0dc8
