--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 3e817f8
-	trimbase = 
+	base = b6a0250
+	trimbase = 3e817f8
 	parent = upstream
 	previous = 6df3ec7
