--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 935a1ee
-	trimbase = 
+	base = 5c273ab
+	trimbase = 935a1ee
 	parent = upstream
 	previous = 6df3ec7
