--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = aa3f7f5
-	trimbase = 
+	base = feb25d1
+	trimbase = aa3f7f5
 	parent = upstream
 	previous = 6df3ec7
