--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 97e3a7b
-	trimbase = 
+	base = f29f2a2
+	trimbase = 97e3a7b
 	parent = upstream
 	previous = 6df3ec7
