--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = 71db793
-	trimbase = 
+	base = 0ac965c
+	trimbase = 71db793
 	parent = upstream
 	previous = 6df3ec7
