--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = f3d0b5f
-	trimbase = 
+	base = a5e645c
+	trimbase = f3d0b5f
 	parent = upstream
 	previous = 6df3ec7
