--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = ced539e
-	trimbase = 
+	base = 954a6cd
+	trimbase = ced539e
 	parent = upstream
 	previous = 6df3ec7
