--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = ba29f2a
-	trimbase = 
+	base = f0554d7
+	trimbase = ba29f2a
 	parent = upstream
 	previous = 6df3ec7
