--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 7adf114
-	trimbase = 
+	base = 04121c9
+	trimbase = 7adf114
 	parent = upstream
 	previous = 6df3ec7
