--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = f7cc8f1
-	trimbase = 
+	base = 577cc72
+	trimbase = f7cc8f1
 	parent = upstream
 	previous = 6df3ec7
