--- a/sound_play/package.xml
+++ b/sound_play/package.xml
@@ -1,6 +1,6 @@
 <package>
    <name>sound_play</name>
-   <version>0.2.12</version>
+   <version>0.3.1</version>
    <description>
       sound_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
    </description>
@@ -19,8 +19,6 @@
    <build_depend>actionlib</build_depend>
    <build_depend>audio_common_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
-   <build_depend>libgstreamer0.10-dev</build_depend>
-   <build_depend>libgstreamer-plugins-base0.10-dev</build_depend>
    <build_depend>message_generation</build_depend>
 
    <run_depend>roscpp</run_depend>
@@ -28,13 +26,15 @@
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>audio_common_msgs</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
-   <run_depend>libgstreamer0.10-0</run_depend>
-   <run_depend>libgstreamer-plugins-base0.10-0</run_depend>
-   <run_depend>gstreamer0.10-plugins-ugly</run_depend>
-   <run_depend>gstreamer0.10-plugins-good</run_depend>
+
+   <run_depend>python-gi</run_depend>
+   <run_depend>gstreamer1.0</run_depend>
+   <run_depend>gstreamer1.0-plugins-base</run_depend>
+   <run_depend>gstreamer1.0-plugins-ugly</run_depend>
+   <run_depend>gstreamer1.0-plugins-good</run_depend>
+
    <run_depend>rospy</run_depend>
    <run_depend>festival</run_depend>
-   <run_depend>python-gst</run_depend>
    <run_depend>message_runtime</run_depend>
 
    <export>
