--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e52fd59
-	trimbase = 
+	trim = audio_capture
+	base = 386fa3c
+	trimbase = e52fd59
 	parent = upstream
 	previous = f567c24
