--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 83d4a9b
-	trimbase = 
+	trim = sound_play
+	base = 1a3f30d
+	trimbase = 83d4a9b
 	parent = upstream
 	previous = f567c24
