--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5b27f27
-	trimbase = 
+	trim = audio_common
+	base = 3b907f2
+	trimbase = 5b27f27
 	parent = upstream
 	previous = f567c24
