--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 87eba41
-	trimbase = 
+	trim = audio_common_msgs
+	base = 17a357b
+	trimbase = 87eba41
 	parent = upstream
 	previous = f567c24
