--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b907f2
+	base = 3b2527c
 	trimbase = 
 	parent = release/kinetic/audio_common
-	previous = 
+	previous = 3b907f2
