--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f3e391
+	base = 3a82db1
 	trimbase = 
 	parent = debian/kinetic/audio_common
-	previous = 
+	previous = 4f3e391
