--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff2c917
+	base = b176c4d
 	trimbase = 
 	parent = debian/kinetic/sound_play
-	previous = 
+	previous = ff2c917
