--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d39c9e6
+	base = 98e3d56
 	trimbase = 
 	parent = release/kinetic/audio_play
-	previous = 
+	previous = d39c9e6
