--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3555081
+	base = a415545
 	trimbase = 
 	parent = debian/kinetic/audio_play
-	previous = 
+	previous = 3555081
