--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dba4951
+	base = 0a3c676
 	trimbase = 
 	parent = debian/kinetic/audio_common_msgs
-	previous = 
+	previous = dba4951
