--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 386fa3c
+	base = fe30bf2
 	trimbase = 
 	parent = release/kinetic/audio_capture
-	previous = 
+	previous = 386fa3c
