--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f6b695
+	base = b85ee43
 	trimbase = 
 	parent = debian/kinetic/audio_capture
-	previous = 
+	previous = 1f6b695
