--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c63abda
+	base = ae64674
 	trimbase = 
 	parent = debian/kinetic/audio_common
-	previous = 
+	previous = c63abda
