--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 52385b7
+	base = 2b0b722
 	trimbase = 
 	parent = debian/kinetic/sound_play
-	previous = 
+	previous = 52385b7
