--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb4fec3
+	base = 67f5ef9
 	trimbase = 
 	parent = debian/kinetic/audio_play
-	previous = 
+	previous = cb4fec3
