--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ffe2975
+	base = 74f74c1
 	trimbase = 
 	parent = debian/kinetic/audio_common_msgs
-	previous = 
+	previous = ffe2975
