--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0191b67
+	base = ca4ca0f
 	trimbase = 
 	parent = debian/kinetic/audio_capture
-	previous = 
+	previous = 0191b67
