--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce3cf7c
+	base = 6ef5bd4
 	trimbase = 
 	parent = rpm/kinetic/audio_common
-	previous = 
+	previous = ce3cf7c
