--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a3f30d
+	base = a3ac2a1
 	trimbase = 
 	parent = release/kinetic/sound_play
-	previous = 
+	previous = 1a3f30d
