--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d0a31d
+	base = a5082f0
 	trimbase = 
 	parent = rpm/kinetic/sound_play
-	previous = 
+	previous = 2d0a31d
