--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1870a23
+	base = cd30f56
 	trimbase = 
 	parent = rpm/kinetic/audio_play
-	previous = 
+	previous = 1870a23
