--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 17a357b
+	base = a9945a8
 	trimbase = 
 	parent = release/kinetic/audio_common_msgs
-	previous = 
+	previous = 17a357b
