--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 01901c4
+	base = 7581dd1
 	trimbase = 
 	parent = rpm/kinetic/audio_common_msgs
-	previous = 
+	previous = 01901c4
