--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b7cbb16
+	base = ce72c13
 	trimbase = 
 	parent = rpm/kinetic/audio_capture
-	previous = 
+	previous = b7cbb16
