--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_capture
-	base = 7f79883
-	trimbase = 
+	base = 001e5bc
+	trimbase = 7f79883
 	parent = upstream
 	previous = 520bfbd
