--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_play
-	base = 0de9243
-	trimbase = 
+	base = b88d9ca
+	trimbase = 0de9243
 	parent = upstream
 	previous = 520bfbd
