--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_play
-	base = e4d37bc
-	trimbase = 
+	base = 255a5a1
+	trimbase = e4d37bc
 	parent = upstream
 	previous = 520bfbd
