--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common
-	base = 9a8d94c
-	trimbase = 
+	base = 7620fd8
+	trimbase = 9a8d94c
 	parent = upstream
 	previous = 520bfbd
