--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_common_msgs
-	base = 2fbf2d5
-	trimbase = 
+	base = ea9126c
+	trimbase = 2fbf2d5
 	parent = upstream
 	previous = 520bfbd
